# DictDataBase

./: pyproject.toml  test_new_orm.py
DictDataBase/: __init__.py  utils.py
ddb_storage/Expense/: 1.json
ddb_storage/User/: 1.json  2.json
dictdatabase/: utils.py
dictdatabase/c_code/: seek.c
