[tool.poetry]
name = "DictDataBase"
version = "1.1.5"
repository = "https://github.com/mkrd/DictDataBase"
description = "Easy-to-use database using dicts"
authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
path-dict = "^1.0.4"
Brotli = "^1.0.9"

[tool.poetry.dev-dependencies]

super-py = "^0.4.0"
snakeviz = "^2.1.1"
pycodestyle = "^2.8.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
